<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <group
        android:checkableBehavior="none"
        android:menuCategory="container">
        <item
            android:id="@+id/nav_search_by_name"
            android:title="@string/search_by_name" />
        <item
            android:id="@+id/nav_search_by_country"
            android:title="@string/search_by_country" />
        <item
            android:id="@+id/nav_search_by_id"
            android:title="@string/search_by_id" />
    </group>

</menu>